--- a/beef_bourginuon.html
+++ b/beef_bourginuon.html
@@ -16,6 +16,8 @@
     <div>
         <!-- this should be a table with properties in the future -->
         <h2>Beef Fajita</h2>
+
+        <img src="media/MC-Beef-Bourguignon-lpbv-mediumSquareAt3X-v4.jpg" alt="">
         <h3>Ingredients</h3>
         <ul>
             <li>900g Skirt Steak</li>
