--- a/caesar_salad_dressing.html
+++ b/caesar_salad_dressing.html
@@ -16,6 +16,8 @@
     <div>
         <!-- this should be a table with properties in the future -->
         <h2>Beef Fajita</h2>
+
+        <img src="media/Simply-Recipes-Easy-Caesar-Dressing-LEAD-21-a710fe67654a42e2bff34f16d8dfeaff.jpg" alt="">
         <h3>Ingredients</h3>
         <ul>
             <li>900g Skirt Steak</li>
