--- a/butter_chicken.html
+++ b/butter_chicken.html
@@ -16,6 +16,8 @@
     <div>
         <!-- this should be a table with properties in the future -->
         <h2>Beef Fajita</h2>
+
+        <img src="media/AR-141169-Easy-Indian-Butter-Chicken-DDMFS-4x3-beauty-588ff54d1e0f4a0788906e851e27d540.jpg" alt="">
         <h3>Ingredients</h3>
         <ul>
             <li>900g Skirt Steak</li>
